vendor/zgui/libs/imgui/backends/imgui_impl_dx11.h

// dear imgui: Renderer Backend for DirectX11
// This needs to be used along with a Platform Backend (e.g. Win32)

// Implemented features:
//  [X] Renderer: User texture binding. Use 'ID3D11ShaderResourceView*' as ImTextureID. Read the FAQ about ImTextureID!
//  [X] Renderer: Large meshes support (64k+ vertices) with 16-bit indices.

// You can use unmodified imgui_impl_* files in your project. See examples/ folder for examples of using this.
// Prefer including the entire imgui/ repository into your project (either as a copy or as a submodule), and only build the backends you need.
// If you are new to Dear ImGui, read documentation from the docs/ folder + read the top of imgui.cpp.
// Read online: https://github.com/ocornut/imgui/tree/master/docs

#pragma once
#include "imgui.h" // IMGUI_IMPL_API

extern "C"
{
    struct ID3D11Device;
    struct ID3D11DeviceContext;

    IMGUI_IMPL_API bool ImGui_ImplDX11_Init(ID3D11Device *device, ID3D11DeviceContext *device_context);
    IMGUI_IMPL_API void ImGui_ImplDX11_Shutdown();
    IMGUI_IMPL_API void ImGui_ImplDX11_NewFrame();
    IMGUI_IMPL_API void ImGui_ImplDX11_RenderDrawData(ImDrawData *draw_data);

    // Use if you want to reset your rendering device without losing Dear ImGui state.
    IMGUI_IMPL_API void ImGui_ImplDX11_InvalidateDeviceObjects();
    IMGUI_IMPL_API bool ImGui_ImplDX11_CreateDeviceObjects();
}